--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
     </div>
   </div>
 
-<script src="src/settings.089da.js" charset="utf-8"></script>
+<script src="src/settings.2ac52.js" charset="utf-8"></script>
 <script src="vconsole.min.bac6b.js"></script>
-<script src="main.e41a2.js" charset="utf-8"></script>
+<script src="main.8df29.js" charset="utf-8"></script>
 
 <script type="text/javascript">
 (function () {
