--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
     </div>
   </div>
 
-<script src="src/settings.5a773.js" charset="utf-8"></script>
+<script src="src/settings.31a8a.js" charset="utf-8"></script>
 <script src="vconsole.min.bac6b.js"></script>
-<script src="main.d421c.js" charset="utf-8"></script>
+<script src="main.dcfce.js" charset="utf-8"></script>
 
 <script type="text/javascript">
 (function () {
